--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre la Barbería Alura</title>
 </head>
 <body>
-    
+    <p>Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
+        la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 </body>
 </html>
