--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre la Barbería Alura</title>
+    <title>Barbería Alura</title>
 </head>
 <body>
+    <title>SOBRE LA BARBERIA ALURA</title>
+    
     <p>Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
         la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 
