cambio el titulo con etiqueta h1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Barbería Alura</title>
 </head>
 <body>
-    <title>SOBRE LA BARBERIA ALURA</title>
+    <h1>SOBRE LA BARBERIA ALURA</h1>
     
+
     <p>Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
         la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 
