--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbería Alura</title>
-</head>
-<body>
-    <h1>SOBRE LA BARBERIA ALURA</h1>
-    
+    <!DOCTYPE html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">  <! -- reconozca lenguajes y tildes y demas cosas definir el diccionario -->
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Barbería Alura</title>
+        </head>
+        <body>
+            <h1>SOBRE LA BARBERIA ALURA</h1>
+            
 
-    <p>Ubicada en el corazón de la ciudad, la <Strong>Barbería Alura</Strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
-        la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
+            <p>Ubicada en el corazón de la ciudad, la <Strong>Barbería Alura</Strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
+                la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 
-        <p><em>misión es: <Strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</Strong></em> </p>
-        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, 
-            para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, 
-            garantizando calidad y satisfacción de nuestros clientes. </p>
-</body>
-</html>
+                <p><em>misión es: <Strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</Strong></em> </p>
+                <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, 
+                    para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, 
+                    garantizando calidad y satisfacción de nuestros clientes. </p>
+        </body>
+    </html>
