--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Barbería Alura</title>
+
+             <style>
+              p{
+                text-align: center;
+              }
+
+             </style>
+
+
         </head>
         <body>
-            <h1 style="text-align: center;">SOBRE LA BARBERIA ALURA</h1>
+            <h1 style="text-align: center0;">SOBRE LA BARBERIA ALURA</h1>
             
 
-            <p style="text-align: center;">Ubicada en el corazón de la ciudad, la <Strong>Barbería Alura</Strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
+            <p>Ubicada en el corazón de la ciudad, la <Strong>Barbería Alura</Strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
                 la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 
-            <p style="font-size: 20px;text-align:center;"><em>misión es: <Strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</Strong></em> </p>
+            <p style="font-size: 20px;"><em>misión es: <Strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</Strong></em> </p>
                 
-            <p style="text-align: center;">Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, 
+            <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, 
                     para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, 
                     garantizando calidad y satisfacción de nuestros clientes. </p>
         </body>
