--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         </head>
         <body>
-            <h1 style="text-align: center0;">SOBRE LA BARBERIA ALURA</h1>
+            <h1 style="text-align: center;">SOBRE LA BARBERIA ALURA</h1>
             
 
             <p>Ubicada en el corazón de la ciudad, la <Strong>Barbería Alura</Strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, 
