hago cambios en los estilos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </head>
         <body>
 
-            <img src="imagenes/barner.jpeg">
+            <img id="barner" src="imagenes/barner.jpeg">
             <h1 style="text-align: center;">SOBRE LA BARBERIA ALURA</h1>
             
 
