agrego una lista y la arreglo en css

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
             <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, 
                     para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, 
                     garantizando calidad y satisfacción de nuestros clientes. </p>
+
+         <h2>DIFERENCIALES</h2>
+        <ul>
+          <li class="items">Atencion personalizada a los clientes</li>
+          <li class="items">Espacio diferenciado</li>
+          <li class="items">localizacion</li>
+          <li class="items">profesionales calificados</li>
+        </ul>
+
         </body>
     </html>
